Fix the inputs' generated content and the spacing

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ main {
 
 input {
     -webkit-appearance: none;
-    width: 225px;
+    width: 250px;
     padding: 7px 10px;
     border: 1px solid #E5E7EB;
     border-radius: 5px;
@@ -103,11 +103,12 @@ form section {
     display: flex;
     flex-flow: wrap;
 }
+
 .form-input {
     display: flex;
     flex-direction: column;
     width: fit-content;
-    margin: 0 50px 10px 0;
+    margin: 0 50px 25px 0;
 }
 
 input:focus:invalid {
@@ -132,17 +133,30 @@ input:required + span::before {
     content: "required";
     position: absolute;
     top: -50px;
-    left: 190px;
+    left: 215px;
     font-size: 0.7rem;
-    background-color: black;
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border-radius: 2px;
     padding: 1px 5px;
 }
 
-input[type="password"]:invalid:focus + span::after {
+input:invalid:focus + span::after {
     position: absolute;
-    content: "Your password must have at least 8 characters";
+    top: 5px;
+    color: rgb(255, 0, 0);
     font-size: 0.7rem;
-    color: red;
+    width: 300px;
+}
+
+input[type="password"]:invalid:focus + span::after {
+    content: "Your password must have at least 8 characters";
+}
+
+input[type="email"]:invalid:focus + span::after {
+    content: "Please enter in a valid email. Ex: name@example.com";
+}
+
+input[type="tel"]:invalid:focus + span::after {
+    content: "Please enter in a phone number. Ex: 123-456-7890";
 }
